[gd_scene load_steps=7 format=2]

[ext_resource path="res://Script/Main.gd" type="Script" id=1]
[ext_resource path="res://Scene/Table.tscn" type="PackedScene" id=2]
[ext_resource path="res://Source/Xolonium-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scene/ACell.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Table" parent="." instance=ExtResource( 2 )]

[node name="Control" type="Control" parent="."]
margin_top = 864.0
margin_right = 640.0
margin_bottom = 1280.0
theme = SubResource( 2 )

[node name="LabelGeneration" type="Label" parent="Control"]
margin_left = 300.0
margin_right = 600.0
margin_bottom = 40.0
text = "Generation: 0"
align = 1
valign = 1

[node name="LabelSpeed" type="Label" parent="Control"]
margin_right = 240.0
margin_bottom = 40.0
text = "Speed: 20"
align = 1
valign = 1

[node name="HScrollBarSpeed" type="HScrollBar" parent="Control"]
margin_left = 20.0
margin_top = 56.0
margin_right = 620.0
margin_bottom = 120.0
min_value = 1.0
max_value = 120.0
value = 20.0

[node name="StartStopButton" type="Button" parent="Control"]
margin_left = 500.0
margin_top = 136.0
margin_right = 620.0
margin_bottom = 176.0
text = "Stop"

[node name="ColorButton" type="Button" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 20.0
margin_top = 136.0
margin_right = 60.0
margin_bottom = 176.0
text = "0"

[node name="Cell" parent="Control" instance=ExtResource( 4 )]
position = Vector2( 260, 136 )

[node name="ResetButton" type="Button" parent="Control"]
margin_left = 20.0
margin_top = 136.0
margin_right = 140.0
margin_bottom = 176.0
text = "Reset"

[node name="Label" type="Label" parent="Control"]
margin_left = 20.0
margin_top = 193.0
margin_right = 220.0
margin_bottom = 233.0
text = "Ants Data"
valign = 1

[node name="AntsList" type="OptionButton" parent="Control"]
margin_left = 200.0
margin_top = 193.0
margin_right = 620.0
margin_bottom = 233.0
align = 1
icon_align = 1

[node name="Label2" type="Label" parent="Control"]
margin_left = 20.0
margin_top = 253.0
margin_right = 70.0
margin_bottom = 293.0
text = "Dir:"
align = 1
valign = 1

[node name="DirList" type="OptionButton" parent="Control"]
margin_left = 80.0
margin_top = 253.0
margin_right = 330.0
margin_bottom = 293.0
align = 1

[node name="XLabel" type="Label" parent="Control"]
margin_left = 340.0
margin_top = 253.0
margin_right = 370.0
margin_bottom = 293.0
text = "x:"
align = 1
valign = 1

[node name="XEdit" type="LineEdit" parent="Control"]
margin_left = 370.0
margin_top = 252.0
margin_right = 476.0
margin_bottom = 294.0

[node name="YLabel" type="Label" parent="Control"]
margin_left = 475.0
margin_top = 253.0
margin_right = 515.0
margin_bottom = 293.0
text = "y:"
align = 1
valign = 1

[node name="YEdit" type="LineEdit" parent="Control"]
margin_left = 515.0
margin_top = 252.0
margin_right = 621.0
margin_bottom = 294.0

[node name="AntsEdit" type="LineEdit" parent="Control"]
margin_left = 20.0
margin_top = 318.0
margin_right = 620.0
margin_bottom = 360.0
text = "1234567026262626"

[node name="DeleteButton" type="Button" parent="Control"]
margin_left = 20.0
margin_top = 376.0
margin_right = 180.0
margin_bottom = 416.0
text = "Delete"

[node name="AddButton" type="Button" parent="Control"]
margin_left = 240.0
margin_top = 376.0
margin_right = 400.0
margin_bottom = 416.0
text = "Add"

[node name="EditButton" type="Button" parent="Control"]
margin_left = 460.0
margin_top = 376.0
margin_right = 620.0
margin_bottom = 416.0
text = "Edit"

[connection signal="generation_proceeded" from="Table" to="." method="_on_table_generation_proceeded"]
[connection signal="value_changed" from="Control/HScrollBarSpeed" to="." method="_on_h_scroll_bar_speed_value_changed"]
[connection signal="pressed" from="Control/StartStopButton" to="." method="_on_start_stop_button_pressed"]
[connection signal="pressed" from="Control/ColorButton" to="." method="_on_color_button_pressed"]
[connection signal="pressed" from="Control/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="item_selected" from="Control/AntsList" to="." method="_on_ants_list_item_selected"]
[connection signal="pressed" from="Control/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="Control/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="Control/EditButton" to="." method="_on_edit_button_pressed"]
